--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -14,3 +14,10 @@
     font-size: 36px;
     color: red;
 }
+
+.sign-out-button{
+    width: 120px;
+    height: 60px;
+    font-size: 20px;
+    font-family: "Segoe Print", serif;
+}
