--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,16 +1,22 @@
+.error-message{
+    font-size: 20px;
+    color: red;
+}
+.succeed-message{
+    font-size: 20px;
+    color: green;
+}
 .device-button{
     width: 120px;
     height: 60px;
     font-size: 36px;
     font-family: "Segoe Print", serif;
 }
-
 .index-text{
     font-size: 36px;
     color: blue;
 }
-
 .parser-selector{
     font-size: 36px;
-    color: red;
+    color: magenta;
 }
