--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -20,3 +20,24 @@
     font-size: 36px;
     color: magenta;
 }
+.nice-button{
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: azure;
+    text-decoration-style: dashed;
+    display: inline-block;
+    font-size: 16px;
+    opacity: 0.6;
+}
+.input-text{
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
+}
