--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -41,3 +41,11 @@
     border-radius: 8px;
     box-sizing: border-box;
 }
+.login-text{
+    text-decoration-style: wavy;
+    text-decoration: black;
+    text-shadow: aqua;
+    text-align: center;
+    text-anchor: start;
+    color: black;
+}
