--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -47,3 +47,11 @@
     text-shadow: aqua;
     color: black;
 }
+th {
+    background-color: slategray;
+    color: white;
+}
+td {
+    border-bottom: 1px solid #ddd;
+}
+tr:hover {background-color: #f5f5f5;}
