--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -14,11 +14,11 @@
 }
 .index-text{
     font-size: 36px;
-    color: blue;
+    color: #000000;
 }
 .parser-selector{
     font-size: 36px;
-    color: magenta;
+    color: #918d94;
 }
 .nice-button{
     background-color: black;
