--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -41,12 +41,6 @@
     border-radius: 8px;
     box-sizing: border-box;
 }
-.login-text{
-    text-decoration-style: wavy;
-    text-decoration: black;
-    text-shadow: aqua;
-    color: black;
-}
 th {
     background-color: slategray;
     color: white;
@@ -55,3 +49,58 @@ td {
     border-bottom: 1px solid #ddd;
 }
 tr:hover {background-color: #f5f5f5;}
+.header{
+    overflow: hidden;
+    background-color: #918d94;
+    padding: 20px 10px;
+    border-radius: 10px;
+}
+.header-right{
+    float: right;
+}
+.header-left{
+    float: left;
+}
+.custom-select {
+    position: relative;
+    font-family: Arial, serif;
+    -webkit-appearance: button;
+    -webkit-border-radius: 2px;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    -webkit-padding-end: 20px;
+    -webkit-padding-start: 2px;
+    -webkit-user-select: none;
+    border: 1px solid grey;
+    background: #000000 no-repeat 97% center;
+    font-size: inherit;
+    margin: 20px;
+    overflow: hidden;
+    padding: 5px 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    border-radius: 8px;
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-shadow: 2px 2px black;
+    color: #dfffff;
+    letter-spacing: 2px;
+}
+.custom-select option{
+    color: #dfffff;
+}
+.header-panel-login{
+    background: #000000 no-repeat 97% center;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 8px;
+
+}
+.header-text{
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-shadow: 2px 2px black;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+    color: #dfffff;
+    font-family: Arial, serif;
+}
